<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/paymentPage"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#142587"
    tools:context=".PaymentPage">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="-70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#fff"
            android:text="@string/from"/>
        <TextView
            android:id="@+id/sendertext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:textStyle="italic"
            android:textColor="#fff"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:text="@string/to"/>
        <TextView
            android:id="@+id/receiverText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:textStyle="italic"
            android:textColor="#fff"
            android:textSize="20sp"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:accessibilityLiveRegion="none"
        android:backgroundTint="#fff"
        android:orientation="vertical"
        app:cardCornerRadius="40dp"
        app:cardElevation="20dp"
        app:cardMaxElevation="30dp"
        app:cardUseCompatPadding="false"
        app:contentPadding="10dp"
        tools:ignore="TextSizeCheck">

        <EditText
            android:id="@+id/amountInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:hint="@string/enter_amount"
            android:inputType="number"
            android:textSize="45sp"
            android:autofillHints="Enter Amount here" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/safe_payment"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="100dp"/>

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/imageView4"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/payment"
            android:contentDescription="@string/todoImage" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/payButton"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="#00B0FF"
        android:elevation="30dp"
        android:ellipsize="none"
        android:fontFamily="sans-serif-black"
        android:text="@string/pay_securely"
        android:textSize="30sp"
        android:textStyle="bold"
        app:cornerRadius="50dp" />

</LinearLayout>